[package]
name = "wasmcolonies-domain"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[dependencies]
eventsourcing = "0.1.5"
eventsourcing-derive = "0.1.3"
wacolonies-protocol = {path = "../protocol"}
serde = { version = "1.0.123" , features = ["derive"] }
serde_json = "1.0.62"
serde_derive = "1.0.123"