[package]
name = "wasmcolonies-protocol"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123" , features = ["derive"] }
serde_json = "1.0.62"
serde_derive = "1.0.123"
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"
