[package]
name = "shard-driver"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
wasmcolonies-protocol = { path = "../protocol"}
wasmcolonies-domain = { path = "../domain" }