[package]
name = "wcshard"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
wasmcolonies-protocol = { path = "../protocol"}
wasmcolonies-domain = { path = "../domain" }
nats = "0.9.8"
data-encoding = "2.3.1"
ring = "0.16.19"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
wascap = "0.6.0"
uuid = {version = "0.8.2", features  = ["serde", "v4"]}
# Do NOT need rendering, graphics, etc
bevy = {version = "0.5.0", features = ["bevy_dynamic_plugin"]  }